k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumen-cxr-service
  namespace: lumen-cxr
  labels:
    app.kubernetes.io/name: lumen-cxr
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: lumen-cxr
